--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,23 @@
 {
-  "presets": [
-    ["latest", {
-      "es2015": { "modules": false }
+
+  "plugins": [
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-object-rest-spread",
+    ["@babel/plugin-proposal-class-properties", {"setPublicClassFields": true}],
+    "@babel/plugin-transform-spread",
+    ["module-resolver", {
+      "root": ["./src"],
+      "alias": {
+        "@": "./src"
+      }
     }]
+  ],
+  "presets": [
+    ["@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": { "version": 3, "proposals": true }
+      }
+    ]
   ]
 }
