--- a/package.json
+++ b/package.json
@@ -1,23 +1,41 @@
 {
   "name": "vue-toasted",
   "description": "Responsive Touch Compatible Toast plugin for VueJS 2+",
-  "version": "1.1.28",
+  "version": "2.0.0",
   "author": "Shakeeb Sadikeen <shakee.zats@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/shakee93/vue-toasted.git"
   },
-  "main": "./dist/vue-toasted.min.js",
-  "types": "./types/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "unpkg": "dist/vuelib.min.js",
+  "types": "types/index.d.ts",
+  "files": [
+    "dist",
+    "src",
+    "types/*.d.ts"
+  ],
+  "sideEffects": [
+    "*.css",
+    "*.scss"
+  ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress --hide-modules",
-    "build-local-watch": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress --hide-modules --watch",
-    "release": "npm run build && npm run core && npm run css",
-    "css": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.css.js --progress --hide-modules ",
-    "core": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.core.js --progress --hide-modules",
-    "es": "babel src --presets babel-preset-es2015 --out-dir dist"
+    "cz": "git-cz",
+    "serve": "vue-cli-service serve",
+    "lint": "vue-cli-service lint",
+    "build:es": "rimraf dist && cross-env NODE_ENV=production rollup --config rollup.config.js --format es",
+    "build": "rollup -c",
+    "clean": "rm -Rf ./dist",
+    "dev": "npx cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "buildx": "npx cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress",
+    "build-local-watch": "npx cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress--watch",
+    "release": "yarn build && yarn core && yarn css",
+    "css": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.css.js --progress  ",
+    "core": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.core.js --progress ",
+    "es": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "lint:eslint": "eslint --fix ./src/**/*.{js,vue}"
   },
   "keywords": [
     "toast",
@@ -31,32 +49,75 @@
     "vue-toastr",
     "toastr"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^3.2.45"
+  },
   "devDependencies": {
-    "animejs": "^2.2.0",
-    "autoprefixer": "^7.2.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
-    "cross-env": "^3.2.4",
-    "css-loader": "^0.25.0",
-    "es6-object-assign": "^1.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.9.0",
-    "hammerjs": "^2.0.8",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "^2.1.6",
-    "requirejs": "^2.3.6",
-    "sass-loader": "^6.0.7",
-    "shortid": "^2.2.15",
-    "style-loader": "^0.18.2",
-    "vue-loader": "^11.0.0",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^2.7.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^2.11.5"
-  }
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "7.12.0",
+    "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-image": "^2.0.5",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-url": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
+    "@vue/cli-plugin-babel": "4.5.0",
+    "@vue/cli-plugin-eslint": "5.0.8",
+    "@vue/cli-plugin-typescript": "5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/compiler-sfc": "^3.2.47",
+    "@vue/eslint-config-prettier": "7.0.0",
+    "@vue/eslint-config-typescript": "11.0.2",
+    "autoprefixer": "^9.7.8",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-vue": "^7.1.0",
+    "lint-staged": "^10.4.2",
+    "postcss": "^8.0.0",
+    "postcss-import": "12.0.1",
+    "postcss-inline-svg": "^4.1.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-nested": "^4.2.1",
+    "postcss-simple-vars": "5.0.2",
+    "postcss-url": "^8.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.30.0",
+    "rollup-plugin-css-only": "^2.1.0",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "0.28.0",
+    "rollup-plugin-vue": "^6.0.0",
+    "typescript": "3.9.3",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^4.0.0",
+    "husky": "^4.3.0",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "git-cz": "^4.7.4"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
